# bbb-cpp

./: .gitignore  README.md
asio/: server  server.cpp
kruiser/: CMakeLists.txt  build.sh  client.py  control.py  drive.sh  kruiser  kruiser.cpp  nohup.out  start.py  start.sh  start_kruiser.py  stream.sh
kruiser/camera/: Camera.cpp  Camera.h
kruiser/network/: SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  server.hpp  sync_server.hpp
kruiser/robotcape/: robotcape.hpp
kruiser/session/: session.hpp
kruiser/vehicle/: CMakeLists.txt  build.sh  camera.hpp  camera_mount.hpp  drivetrain.hpp  motor.hpp  vehicle  vehicle.cpp  vehicle_server.hpp  vehicle_session.hpp
kruiser/vision/: build.sh  camera.hpp  vision  vision.cpp  vision_server.hpp  vision_session.hpp
